re PR debug/12500 (stabs debug info -- void no longer a predefined / builtin type)

PR debug/12500
        * dbxout.c (dbxout_typedefs): Use COMPLETE_OR_VOID_TYPE_P.

From-SVN: r72799